# SwapStore

./: README.md  index.html  package-lock.json  package.json  script.js  styles.css  swapstore_engine.cpp
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_handler.rs  lib.rs  main.rs  process_manager.rs
src-tauri/src/algorithms/: fifo.rs  mod.rs
src-tauri/src/kv_store/: memory_manager.rs  mod.rs  page.rs
src/components/: AlgorithmComparison.css  AlgorithmComparison.jsx  FileLoader.jsx  KVOperations.css  KVOperations.jsx  LoadedFilesList.jsx  MemoryVisualizer.css  MemoryVisualizer.jsx  PerformanceMetrics.css  PerformanceMetrics.jsx  ProcessControls.jsx  ProcessTracker.jsx  StorageStats.jsx  SwapAnimator.css  SwapAnimator.jsx
