[package]
name = "swapstore"
version = "0.1.0"
description = "Understanding swap space management with memory visualization and performance analyzer and metrics."
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-maximize", "shell-open", "window-unminimize", "window-start-dragging", "window-close", "window-unmaximize", "window-minimize", "window-hide", "window-show", "icon-ico", "icon-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
